main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
  annotations:
   nginx.ingress.kubernetes.io/use-regex: "true"
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/rewrite-target: /$2
   nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: node1.cluster.local
    http:
      paths:
        - pathType: Prefix
          path: /wordpress(/|$)(.*)
          backend:
            service:
              name: wordpress-service
              port:
               number: 80
        - path: /phpmyadmin(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: phpmyadmin-service
              port:
               number: 80
